--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -66,7 +66,7 @@ p{
 }
 
 .Video{
-    margin-left: 34%;
+    margin-left: 24%;
     margin-top: 5%;
     
     
@@ -102,9 +102,9 @@ h2{
         height: 330px;
     }
 
-    video.V{
-        width: 490px;
-        height: 290px;
+    iframe.V{
+        width: 450px;
+        height: 250px;
     
     }
 
@@ -140,7 +140,7 @@ h2{
     }
 
     .Video{
-        margin-left:0%;
+        margin-left:3%;
         margin-top: 5%;
         
         
@@ -155,6 +155,7 @@ h2{
     
 }
 
+
 @media screen and (max-width: 400px)
 {
     img.T{
@@ -166,9 +167,9 @@ h2{
             height: 330px;
         }
     
-        video.V{
-            width: 490px;
-            height: 290px;
+        iframe.V{
+            width: 400px;
+            height: 200px;
         
         }
     
@@ -176,13 +177,14 @@ h2{
             
         .Titulo{
     
-            margin-left: 5%;
+            margin-left: 0%;
             
         }
     
         .cuadro{
         
-            margin-left: 10%
+            margin-left: 15%;
+            margin-bottom: 30%;
             
         }
         .Contenido{
@@ -206,7 +208,7 @@ h2{
         }
     
         .Video{
-            margin-left:0%;
+            margin-left:1%;
             margin-top: 5%;
             
             
