--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -136,7 +136,9 @@ h2{
     h1{
         font-family: sans-serif;
         font-size: 70px;
-        margin-left: 15%;
+        margin-left: 18%;
+        color: rgb(255, 0, 140);
+
     }
 
     .Video{
@@ -168,8 +170,8 @@ h2{
         }
     
         iframe.V{
-            width: 400px;
-            height: 200px;
+            width: 380px;
+            height: 180px;
         
         }
     
@@ -177,7 +179,7 @@ h2{
             
         .Titulo{
     
-            margin-left: 0%;
+            margin-left: -3%;
             
         }
     
@@ -192,7 +194,7 @@ h2{
             color: rgb(255, 255, 255);
             font-family: cursive;
             width: 90%;
-            margin-top: 20%;
+            margin-top: 50%;
             
            
             font-size: 20px;
