--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -179,7 +179,7 @@ h2{
             
         .Titulo{
     
-            margin-left: -3%;
+            margin-right: 3%;
             
         }
     
@@ -189,12 +189,17 @@ h2{
             margin-bottom: 30%;
             
         }
+        
+        .Fondo{
+            margin-top: 40%;
+        }
+
         .Contenido{
         
             color: rgb(255, 255, 255);
             font-family: cursive;
             width: 90%;
-            margin-top: 50%;
+            
             
            
             font-size: 20px;
@@ -206,12 +211,13 @@ h2{
             font-family: sans-serif;
             font-size: 70px;
             margin-left: 10%;
+
             color: rgb(255, 0, 140);
         }
     
         .Video{
             margin-left:1%;
-            margin-top: 5%;
+            margin-top: 15%;
             
             
         }
