--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -183,7 +183,7 @@ h2{
             
         .Titulo{
     
-            margin-right: 1%;
+            margin-left: 0%;
             
         }
     
