--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -238,7 +238,7 @@ h2{
         h1{
             font-family: sans-serif;
             font-size: 70px;
-            margin-left: 20%;
+            margin-left: 10%;
 
             color: rgb(255, 0, 140);
         }
@@ -263,10 +263,15 @@ h2{
             margin-bottom: 5%;
             
         }
+
+        h2{
+            margin-left: 20%;
+
+        }
         
         h3{
             color: rgb(153, 0, 255);
             
-            margin-left: 20%;
+            margin-left: 15%;
         }
 }
